// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pairing a course displays create course 1`] = `
<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="new-course-wizard"
      >
        <div
          className="new-course-wizard offering card"
        >
          <div
            className="card-header"
          >
            <div>
              Which course are you teaching?
            </div>
          </div>
          <div
            className="card-body"
          >
            <div
              className="choices-listing list-group"
              onKeyDown={[Function]}
            />
          </div>
          <div
            className="card-footer"
          >
            <div
              className="controls"
            >
              <button
                className="cancel btn btn-default"
                disabled={false}
                hidden={true}
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="back btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Back
              </button>
              <button
                className="next btn btn-primary"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`pairing a course displays find or create when existing courses 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="new-course-wizard"
      >
        <div
          className="new-course-wizard card"
        >
          <div
            className="card-header"
          >
            <h3>
              Do you want to use a new or existing Tutor Course with your LMS?
            </h3>
          </div>
          <div
            className="panel-content card-body"
          >
            <div
              className="choices-listing list-group"
              onKeyDown={[Function]}
            >
              <div
                aria-pressed={false}
                className="list-group-item choice"
                onClick={[Function]}
                role="button"
              >
                <div
                  className="content"
                >
                  Create a new course
                </div>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle fa-w-16 ox-icon ox-icon-circle c0"
                  color="#5e5e5e"
                  data-icon="circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <div
                aria-pressed={false}
                className="list-group-item choice"
                onClick={[Function]}
                role="button"
              >
                <div
                  className="content"
                >
                  Pair LMS to an existing course
                </div>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle fa-w-16 ox-icon ox-icon-circle c0"
                  color="#5e5e5e"
                  data-icon="circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="controls card-footer"
          >
            <button
              className="next btn btn-primary"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`pairing a course displays only create when no courses 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="new-course-wizard"
      >
        <div
          className="new-course-wizard card"
        >
          <div
            className="card-header"
          >
            <h3>
              Do you want to use a new or existing Tutor Course with your LMS?
            </h3>
          </div>
          <div
            className="panel-content card-body"
          >
            <div
              className="choices-listing list-group"
              onKeyDown={[Function]}
            >
              <div
                aria-pressed={false}
                className="list-group-item choice"
                onClick={[Function]}
                role="button"
              >
                <div
                  className="content"
                >
                  Create a new course
                </div>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle fa-w-16 ox-icon ox-icon-circle c0"
                  color="#5e5e5e"
                  data-icon="circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <div
                aria-pressed={false}
                className="list-group-item choice"
                onClick={[Function]}
                role="button"
              >
                <div
                  className="content"
                >
                  Pair LMS to an existing course
                </div>
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle fa-w-16 ox-icon ox-icon-circle c0"
                  color="#5e5e5e"
                  data-icon="circle"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="controls card-footer"
          >
            <button
              className="next btn btn-primary"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
